--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_tesseract_ocr: ^0.4.23
   flutter_mobile_vision_2: ^0.1.15
   flutter_easyloading: ^3.0.5
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +68,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-  - assets/
-  - assets/tessdata/
+    - assets/
+    - assets/tessdata/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
